<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:layout_margin="16dp"
    tools:context="com.example.android.savewater.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/white"
        android:orientation="vertical">

        <ImageView
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_gravity="center_horizontal"
            android:src="@drawable/icon"
            android:layout_marginBottom="8dp"
            />
        <TextView
            style="@style/title_theme"
            android:layout_marginBottom="5dp"
            android:fontFamily="sans-serif-medium"
            android:text="@string/title"/>
        <TextView
            style="@style/body_text"
            android:fontFamily="sans-serif-medium"
            android:text="@string/importance_of_water"
            android:layout_marginBottom="16dp"/>
        <Button
            android:id="@+id/btnOtherWaterUses"
            style="@style/custom_button"
            android:text="@string/other_water_uses"
            android:onClick="otherWaterUses"
            android:layout_marginBottom="16dp"/>
        <Button
            android:id="@+id/btnCriticalToSaveWater"
            style="@style/custom_button"
            android:text="@string/critical_save_water"
            android:onClick="criticalSaveWater"
            android:background="#FFFF00"
            android:layout_marginBottom="16dp"/>
        <Button
            android:id="@+id/btnSaveWaterTips"
            style="@style/custom_button"
            android:text="@string/save_water_tips"
            android:onClick="savingWaterTips"
            android:background="#4CAF50"
            android:layout_marginBottom="16dp"/>


    </LinearLayout>
</ScrollView>
