<?xml version="1.0" encoding="utf-8"?>
<ScrollView  xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="16dp"
    android:background="@android:color/white"
    tools:context="com.example.android.savewater.work">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@android:color/white">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="#90CAF9"
        android:layout_marginBottom="5dp">

        <ImageView
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_marginRight="5dp"
            android:src="@drawable/w_leak"
            android:scaleType="centerCrop"/>
        <TextView
            style="@style/body_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#000000"
            android:text="@string/w_leak"
            android:layout_gravity="center"
            />

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="#90CAF9"
        android:layout_marginBottom="5dp">

        <ImageView
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_marginRight="5dp"
            android:src="@drawable/w_urinal"
            android:scaleType="centerCrop"/>
        <TextView
            style="@style/body_text"
            android:textColor="#000000"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/w_urinal1"
            android:layout_gravity="center"
            />

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="#90CAF9"
        android:layout_marginBottom="5dp">

        <ImageView
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_marginRight="5dp"
            android:src="@drawable/w_restroom"
            android:scaleType="centerCrop"/>
        <TextView
            style="@style/body_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/w_restroom"
            android:textColor="#000000"
            android:layout_gravity="center"
            />

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="#90CAF9"
        android:layout_marginBottom="5dp">

        <ImageView
            android:id="@+id/img_disposal"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_marginRight="5dp"
            android:src="@drawable/w_clock"
            android:scaleType="centerCrop"/>
        <TextView
            style="@style/body_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/w_clock"
            android:textColor="#000000"
            android:layout_gravity="center"
            />

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="#90CAF9"
        android:layout_marginBottom="5dp">

        <ImageView
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_marginRight="5dp"
            android:src="@drawable/w_calendar"
            android:scaleType="centerCrop"/>
        <TextView
            style="@style/body_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/w_calendar"
            android:textColor="#000000"
            android:layout_gravity="center"
            />

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="#90CAF9"
        android:layout_marginBottom="5dp">

        <ImageView
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_marginRight="5dp"
            android:src="@drawable/w_bill"
            android:scaleType="centerCrop"/>
        <TextView
            style="@style/body_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/w_bill"
            android:textColor="#000000"
            android:layout_gravity="center"
            />

    </LinearLayout>


</LinearLayout>
</ScrollView>
